# Phylonoe

./: Cargo.toml  README.md  Rocket.toml
assets/: ML.html  insilico.html  intervals_test.py  intervals_test.py~  loadstyle.css  newnewbing.html  newnewbing.html~  output.css  style.css  test.css  test.html  test.py  water.min.css
assets/assets/css/: bootsnav.css  bootstrap.min.css  styles.css  styley.css  wildtrianglebackgroundstyle.css
assets/css/: logo.scss~  style.css  style.css~  styles.less  workingstyle.css
assets/images/icons/: blank-puzzle-7744504_1280.kra  blank-puzzle-7744504_1280.png~
assets/unneeded/: ML.html~  index.html  loadstyle.css.map  loadstyle.scss  newnewbing.html  newnewbing.html~  style.css~  water.min.css~  workingML.html
assets/unneeded/js/: main.js
src/: actual.rs  cleanupstructmapnums.py  cleanupstructmapnums.py~  collect_out_of_diamond.py  collect_out_of_diamond.py~  currentworkingML.rs  currentworkingML.rs~  excellent.rs  lib.rs  lib.rs~  main.rs  main.rs~  oldshred.rs  resultgrid.hbs  workingmain.rs
static/css/: currentstyle.css  style.css
templates/: loads.html.hbs  posts.html.hbs
