[package]
name = "PJI_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "PJI"
path = "src/lib.rs"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars"]

[dependencies.uuid]
version="1.8.0"
features = [
   "v7",
   "fast-rng",
   "macro-diagnostics",
]

[dependencies]
handlebars = "5.1.2"
async-compression = { version = "0.4.11", features = ["tokio", "gzip"] }
walkdir = "2.5.0"
tokio-tar = "0.3.1"
url = "2.5.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
sha256 = "1.4.0"
rand = "0.8"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.10"
futures = "0.3.28"
rocket = { version = "0.5.0", features = ["json"] }
regex="1.5"
rocket-governor = "0.2.0-rc.1"
aead = { version = "0.5.2", features = ["getrandom"] }
chacha20poly1305 = { version = "0.9.0", features = ["stream", "heapless"] }
anyhow = "1.0.81"
bio="0.38.0"
protein-translate="0.2.0"
bio-types="0.12.0"
ndarray = "0.15.6"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
numpy = "0.20.0"
ndarray-linalg = "0.16.0"
polars = "0.38.2"
clap = { version = "4.5.3", features = ["derive"] }

[dependencies.pyo3]
version="0.20.3"
features = ["auto-initialize"]
