[package]
name = "jwts"
version = "0.2.0"
edition = "2021"

[lib]
name = "PJI"
path = "src/lib.rs"

[workspace]
resolver = "2"

[dependencies.pyo3]
version = "0.21.0"
features = ["auto-initialize"]

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars"]

[dependencies.keyz]
branch = "master"
git = "https://github.com/anxiousmodernman/keyz"

[dependencies.uuid]
version = "1.10.0"
features = [
   "v7", 
   "fast-rng",
   "macro-diagnostics",
]

[dependencies]
handlebars = "6.1.0"
async-compression = { version = "0.4.13", features = ["tokio", "gzip"] }
walkdir = "2.5.0"
tokio-tar = "0.3.1"
sha256 = "1.5.0"
bio = "2.0.3"
protein-translate = "0.2.0"
bio-types = "1.0.4"
ndarray = "0.16.1"
numpy = "0.21.0"
ndarray-linalg = "0.16.0"
polars = "0.38.2"
clap = { version = "4.5.20", features = ["derive"] }
rocket = { version = "0.5.1", features = ["json","tls", "secrets"] }
rocket-governor = "0.2.0-rc.3"
aead = { version = "0.5.2", features = ["getrandom"] }
chacha20poly1305 = { version = "0.10.1", features = ["stream", "heapless"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.128"
chrono = "0.4.38"
jsonwebtoken = "10.3.0"
anyhow = "1.0.89"
rand = "0.8.5"
sled = "0.34.7"
crypto-hash = "0.3.4"
bcrypt = "0.15.1"
reqwest = { version = "0.12.8", features = ["blocking", "json","gzip","deflate"] }
frank_jwt = "3.1.3"
bincode = "1.3.3"
url = "2.5.2"
openssl = "0.10.72"
async-trait = "0.1.81"
percent-encoding = "2.3.1"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
futures = "0.3.31"
regex = "1.11.0"
time = "0.3.36"

